# api/swagger.yaml
@@ -53,7 +53,7 @@ paths:
       tags:
       - "organization"
       description: "Returns an existing department"
-      operationId: "getDepartments"
+      operationId: "getDepartmentByName"
       parameters:
       - name: "name"
         in: "query"
@@ -73,6 +73,8 @@ paths:
             title: "Organizations"
             items:
               $ref: "#/definitions/Organization"
+        400:
+          description: "Bad request"
         404:
           description: "Not found"              
         500:
@@ -83,7 +85,7 @@ paths:
       tags:
       - "organization"
       description: "Returns an existing department"
-      operationId: "getDepartmentsByName"
+      operationId: "getDepartmentByName"
       parameters:
       - name: "name"
         in: "path"
@@ -103,6 +105,8 @@ paths:
             title: "Organizations"
             items:
               $ref: "#/definitions/Organization"
+        400:
+          description: "Bad request"              
         404:
           description: "Not found"              
         500:
@@ -113,7 +117,7 @@ paths:
       tags:
       - "organization"
       description: "Returns an existing group"
-      operationId: "getGroups"
+      operationId: "getGroupByName"
       parameters:
       - name: "name"
         in: "query"
@@ -133,6 +137,8 @@ paths:
             title: "Organizations"
             items:
               $ref: "#/definitions/Organization"
+        400:
+          description: "Bad request"              
         404:
           description: "Not found"
         500:
